@@ -4,7 +4,6 @@ import com.example.demo.domain.topic.dao.TopicRepository;
 import com.example.demo.domain.topic.domain.Topic;
 import com.example.demo.domain.topic.dto.TopicPageResponse;
 import com.example.demo.domain.topic.dto.TopicRequest;
-import com.example.demo.domain.topic.dto.TopicResponse;
 import com.example.demo.domain.topic.exception.PasswordNotMatchedException;
 import com.example.demo.domain.topic.exception.TopicNotFoundException;
 import org.springframework.data.domain.Page;
@@ -13,6 +12,7 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -50,21 +50,18 @@ public class TopicService {
 
     @Transactional(readOnly = true)
     public List<?> getListTopicByNew(Pageable pageable) {
-        return getTopicPageResponse(topicRepository.findAll(pageable));
+        return getTopicPageResponse(topicRepository.findAll(pageable).getContent().stream().toList());
     }
 
     @Transactional(readOnly = true)
     public List<?> getListTopicByHot(Pageable pageable){
         Page<Topic> topicPage = topicRepository.findAllByCreatedAtAfter(pageable, LocalDateTime.now().minusDays(7));
-
-        topicPage.stream().forEach(Topic::sumCommentCountAndSelectedOptions);
-//        List<TopicPageResponse> topicPageResponseList = getTopicPageResponse(topicPage);
-//
-//        topicPageResponseList.stream().map(T);
-//        return
+        return getTopicPageResponse(convertFiveTopicBySumCountAndOptions(topicPage));
     }
-
-//    private List<TopicPageResponse> getTopicPageResponse(Page<Topic> topicPage) {
-//        return topicPage.getContent().stream().map(TopicPageResponse::of).collect(Collectors.toList());
-//    }
+    private List<Topic> convertFiveTopicBySumCountAndOptions(Page<Topic> topics){
+        return topics.stream().sorted(Comparator.comparing(Topic::sumCommentCountAndSelectedOptions).reversed()).limit(5).toList();
+    }
+    private List<TopicPageResponse> getTopicPageResponse(List<Topic> topicPage) {
+        return topicPage.stream().map(TopicPageResponse::of).collect(Collectors.toList());
+    }
 }
